--- a/tp_diseno/src/main/java/grupo3a/tp_diseno/Vista/Administrador/MenuAdmin.form
+++ b/tp_diseno/src/main/java/grupo3a/tp_diseno/Vista/Administrador/MenuAdmin.form
@@ -223,7 +223,7 @@
                 <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                   <Color blue="ff" green="ff" red="ff" type="rgb"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="Regresar"/>
+                <Property name="label" type="java.lang.String" value="Cerrar sesion"/>
                 <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
                   <Dimension value="[110, 40]"/>
                 </Property>
