--- a/tp_diseno/src/main/java/grupo3a/tp_diseno/Vista/Bedel/MenuBedel.form
+++ b/tp_diseno/src/main/java/grupo3a/tp_diseno/Vista/Bedel/MenuBedel.form
@@ -261,7 +261,8 @@
                     <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                       <Color blue="ff" green="ff" red="ff" type="rgb"/>
                     </Property>
-                    <Property name="text" type="java.lang.String" value="Regresar"/>
+                    <Property name="text" type="java.lang.String" value="Cerrar sesion"/>
+                    <Property name="name" type="java.lang.String" value="Cerrar sesion" noResource="true"/>
                     <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
                       <Dimension value="[110, 40]"/>
                     </Property>
